<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.nieruchalski.scrumfamily.Fragments.LogInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/registerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp">

        <TextView
            android:id="@+id/textRegisterNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerNow"
            android:textSize="19dp"
            android:layout_gravity="center"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/buttonRegisterNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:text="@string/registerNowv2"
            android:layout_weight="1"/>

        </LinearLayout>

        <EditText
            android:id="@+id/eTpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_centerInParent="true"
            />

        <EditText
            android:id="@+id/eTlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:hint="@string/login"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="5dp"
            android:layout_above="@id/eTpassword"
            />

        <CheckBox
            android:id="@+id/logInRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberMe"
            android:layout_below="@id/eTpassword"
            android:layout_alignRight="@id/eTpassword"
            android:buttonTint="@android:color/darker_gray"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:text="@string/logIn"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:background="#000000"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/buttonReconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:text="@string/reconnect"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:visibility="invisible"/>

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>


    </RelativeLayout>

</FrameLayout>
