<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.nieruchalski.scrumfamily.Fragments.RegistrationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etPasswordRegister"
            android:inputType="textPassword"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/passwordRegistration"
            android:lines="1"
            android:layout_centerInParent="true"/>

        <EditText
            android:id="@+id/eTRepeatPasswordRegister"
            android:inputType="textPassword"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:lines="1"
            android:hint="@string/passwordRepeatRegistration"
            android:layout_below="@id/etPasswordRegister"/>

        <EditText
            android:id="@+id/etNickRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/etPasswordRegister"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:hint="@string/nick" />

        <EditText
            android:id="@+id/etEmailRegister"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/emailAdress"
            android:layout_above="@id/etNickRegister"
            android:lines="1"/>

        <CheckBox
            android:id="@+id/showPasswordsRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showPasswords"
            android:layout_below="@id/eTRepeatPasswordRegister"
            android:layout_alignRight="@+id/eTRepeatPasswordRegister"
            android:buttonTint="@android:color/darker_gray"/>

        <Button
            android:id="@+id/registerNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:text="@string/registerNowv2"
            android:layout_alignParentBottom="true"
            android:background="#000000"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="#ffffff" />

        <ProgressBar
            android:id="@+id/progressBarRegister"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</FrameLayout>
