<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.nieruchalski.scrumfamily.Fragments.SprintSummaryDataFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/mostTasksDoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostTasksDone"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/mostTaskDoneNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="remes (15)"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/mostTasksDoneText"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/doneTasksText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doneTasksText"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/mostTaskDoneNick"/>

        <TextView
            android:id="@+id/doneTasksNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/doneTasksText"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/notDoneTasksText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notDoneTasksText"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/doneTasksNumber"/>

        <TextView
            android:id="@+id/notDoneTasksNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/notDoneTasksText"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/startDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startDate"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/notDoneTasksNumber"/>

        <TextView
            android:id="@+id/startDateNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2017-3-15"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/startDateText"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/endDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endDate"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/startDateNumber" />

        <TextView
            android:id="@+id/endDateNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2017-3-20"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/endDateText"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/durationTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/durationTime"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/endDateNumber"/>

        <TextView
            android:id="@+id/durationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5 dni"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/durationTimeText"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/sprintDataProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>

    </RelativeLayout>

        <Button
            android:id="@+id/goToTaskBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:text="@string/showTasks"
            android:layout_alignParentBottom="true"
            android:background="#000000"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="#ffffff" />

    </RelativeLayout>


</FrameLayout>
