<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.nieruchalski.scrumfamily.Fragments.NewSprintTitleFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etSprintTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:maxLines="3"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_centerInParent="true"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/sprintTitle"
            android:digits="aąbcćdeęfghijklłmnńoópqrsśtuvwxyzźż0123456789
            AĄBCĆDEĘFGHIJKLŁMNŃOÓPQRSŚTUVWXYZŹŻ" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/etSprintTitle"
            android:layout_below="@+id/etSprintTitle"
            android:text="@string/onlyLettersAndNumbers"/>

        <Button
            android:id="@+id/buttonGoNextSprintTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:text="@string/goNext"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:background="#000000"
            android:textColor="#ffffff" />

        <ProgressBar
            android:id="@+id/newSprintTitleProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</FrameLayout>
